crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/refAbc.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:e140dcf9333220a36b474c5282d48113e79b1de545ec369bf83fdc54bc0888ee
size 1050
